# workshop-irrlicht-engine

./: CMakeLists.txt  conanfile.py  irrlicht-engine-config.cmake.in
.devcontainer/: devcontainer.json
.github/workflows/: ci-conan.yml
include/: engine.h  utils.h
include/irrlicht-engine/: engine.h  named_type.h  ranged_value.h  utils.h  validated_type.h
src/: engine.cpp  utils.cpp
